feat: finish implementing auth functionanlity
